--- a/resumes/templates/resumes/new.html
+++ b/resumes/templates/resumes/new.html
@@ -6,16 +6,8 @@
 <form method="POST" action="{% url 'resumes:index' %}">
     {% csrf_token %}
 
-    title: <br> 
-    <input type="text" name="title"><br>
+    {{ form.as_p }}
 
-    skill: <br>
-    <input type="text" name="skill"><br>
-
-    content: <br>
-    <textarea name="content">
-
-    </textarea>
     <br>
     <button>新增</button>
 
