--- a/resumes/templates/resumes/show.html
+++ b/resumes/templates/resumes/show.html
@@ -3,10 +3,9 @@
 {% block "content" %}
 <h1>{{ resume.title }}</h1>
 <h3>{{ resume.skill }}</h3>
-<h4>{{ resume.content }}</h4>
 <article>
     <p>
-
+        {{ resume.content }}
     </p>
 </article>
 <footer>
